Fixed text overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   background-color: #122412;
   margin: 0;
   padding: 0;
@@ -18,8 +20,8 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #000;
   box-sizing: border-box;
-  width: 65vw;
-  height: 100vh;
+  width: 65%;
+  height: 100%;
   overflow: hidden;
   display: grid;
   grid-template-columns: 0.6fr 1fr;
@@ -220,7 +222,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #000;
   margin-top: 34px;
-  height: 45%;
+  height: fit-content;
 }
 
 .about-header {
@@ -244,6 +246,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #000;
   margin-top: -30%;
+  height: fit-content;
 }
 
 .projects-header {
